# HEDnsExtractor

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  config.json  go.mod  go.sum  hednsextractor.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  release.yml
.github/workflows/: autorelease.yml  build-test.yml
cmd/hednsextractor/: hednsextractor.go
utils/: banner.go  data.go  hurricane.go  network.go  options.go  parameters.go  virustotal.go  workflow.go
