[tool.poetry]
name = "hednsextractor"
version = "0.1.0"
description = "Raw html extractor from Hurricane Electric portal"
authors = [
    "teixeira0xfffff <www@www.www>",
    "brlaw <www@www.www>",
]
repository = "https://github.com/teixeira0xfffff/KoodousFinder"
readme = "README.md"

[tool.poetry.scripts]
hednsextractor = "hednsextractor:app"

[tool.poetry.dependencies]
python = "^3.7"
fake-useragent = "^1.1.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
typer = "^0.9.0"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
